--- a/style.css
+++ b/style.css
@@ -4,20 +4,8 @@
   box-sizing: border-box;
 }
 
-.container {
-  min-width: 60vw;
-}
-
-@media (min-width: 768px) {
-  .navbar-nav {
-    width: 100%;
-    text-align: center;
-  }
-  .navbar-nav > li {
-    float: none;
-    display: inline-block;
-  }
-  .navbar-nav > li.navbar-right {
-    float: right !important;
+@media screen and (max-width: 480px) {
+  .removeMob {
+    display: none;
   }
 }
