--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ footer {
   padding: 25px;
 }
 
+.titleA {
+  justify-items: center;
+}
+
+.titleContainer * {
+  vertical-align: middle;
+}
+
 footer a {
   color: #eeeeee;
 }
@@ -26,7 +34,7 @@ thead th {
 }
 
 .newsGrid {
-  margin-left: -10vw;
+  margin-left: -5vw;
 }
 
 .newsGrid h3 {
@@ -48,4 +56,8 @@ thead th {
 .globalTotals span {
   margin: 10px;
   padding: 5px;
+}
+
+.cImg {
+  height: 7vh;
 }
