--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ thead th {
 .newsCard {
   margin: 2vh 0 2vh 0;
   border-radius: 5px;
+  border: none;
 }
 
 @media screen and (max-width: 600px) {
